--- a/education.html
+++ b/education.html
@@ -44,8 +44,8 @@
       <h3>Pra Sekolah SK Sungai Petai</h3>
     </div>
 
-    <a href="class-pra-thumb.jpg" target="_blank" class="class-thumb">
-      <img src="class-pra-thumb.jpg" alt="Class Photo">
+    <a href="class-pra-thumb.JPG" target="_blank" class="class-thumb">
+      <img src="class-pra-thumb.JPG" alt="Class Photo">
     </a>
   </div>
 </div>
@@ -61,8 +61,8 @@
       <h3>SK Sungai Petai</h3>
     </div>
 
-    <a href="class-sk-thumb.png" target="_blank" class="class-thumb">
-      <img src="class-sk-thumb.png">
+    <a href="class-sk-thumb.PNG" target="_blank" class="class-thumb">
+      <img src="class-sk-thumb.PNG">
     </a>
   </div>
 </div>
@@ -79,8 +79,8 @@
       <p>Sport Science, Computer Science</p>
     </div>
 
-    <a href="class-smk-thumb.jpg" target="_blank" class="class-thumb">
-      <img src="class-smk-thumb.jpg">
+    <a href="class-smk-thumb.JPG" target="_blank" class="class-thumb">
+      <img src="class-smk-thumb.JPG">
     </a>
   </div>
 </div>
@@ -97,8 +97,8 @@
       <p>Diploma in Information Management</p>
     </div>
 
-    <a href="class-uitm-thumb.jpg" target="_blank" class="class-thumb">
-      <img src="class-uitm-thumb.jpg" alt="Class Photo">
+    <a href="class-uitm-thumb.JPG" target="_blank" class="class-thumb">
+      <img src="class-uitm-thumb.JPG" alt="Class Photo">
     </a>
   </div>
 </div>
@@ -111,3 +111,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
